# GVV-Differentiable-CUDA-Renderer

./: .gitignore  README.md
cpp/binaries/Win64/Release/: CustomTensorFlowOperators.exp  CustomTensorFlowOperators.lib
cpp/cmakeTF2Linux/: CMakeLists.txt  submitBuild.sh  submitCompile.sh
cpp/cmakeTF2Linux/output/: err-167201.err  err-167202.err  err-2181829.err  out-167201.out  out-167202.out  out-2181829.out
cpp/cmakeTF2Windows/: CMakeLists.txt  createBuildWin64.bat
cpp/src/Renderer/: CUDABasedRasterization.cpp  CUDABasedRasterization.cu  CUDABasedRasterization.h  CUDABasedRasterizationGrad.cpp  CUDABasedRasterizationGrad.cu  CUDABasedRasterizationGrad.h  CUDABasedRasterizationGradInput.h  CUDABasedRasterizationInput.h  gradientImage.cu
cpp/src/Renderer/Camera/: camera.cpp  camera.h  camera_container.cpp
cpp/src/Renderer/Mesh/: CUDABasedRasterization.cpp  CUDABasedRasterization.cu  CUDABasedRasterization.h  CUDABasedRasterizationInput.h  trimesh.cpp  trimesh.h
cpp/src/TensorflowOperators/CudaRenderer/: CudaRenderer.cpp  CudaRenderer.h  CudaRendererGrad.cpp  CudaRendererGrad.h
cpp/src/Utils/: CameraUtil.h  RendererUtil.h  cuda_SimpleMatrixUtil.h
python/: CudaRenderer.py  test_gradients.py  test_gradients_SphericalHarmonics.py  test_gradients_Texture.py  test_gradients_VertexColor.py  test_gradients_VertexPosition.py  test_render.py
python/data/: cameras.calibration  cone.mtl  magdalena.mtl  monocular.calibration  segmentation.txt  test_SH_tensor.py  test_mesh_tensor.py  untitled.mtl
python/utils/: CameraReader.py  CheckGPU.py  GaussianSmoothingGpu.py  IsometryLoss.py  LaplacianLoss.py  OBJReader.py
